2012-08-21 Roman
- FIX:DB: Some fixes into vcaBase.db and OscadaLibs.db.
- FIX:DAQ.JavaLikeCalc: Flag "call_st" clear at start.
- FIX:UI.Vision: Document rebuild at equal properties obtain is prevented.


2012-08-15 Roman
- !!:FIX:Security.User: No reentrant password hash calculation by function crypt() is replaced by reentrant function crypt_r() for set password.
- DAQ.DAQGate: Config field's name "TM_REST_DT" made short.


2012-08-12 Roman
- UI.Vision: Drawing the rects for the points is rewirited optimal.


2012-08-11 Maxim
- FIX:UI.Vision: Drawing the rect for the centre point of the arc is fixed for the primitive ElFigure.
- FIX:UI.Vision: The order of selecting the fill path is inverted to fit the "z" value of the figures for the primitive ElFigure.


2012-08-11 Roman
- !:DB.SQLite: For seek to deletion into save context do not set into a transaction, for drop transaction prevent at UI.VCAEngine saving.
    Transaction close after last request is decreased to 60 seconds.
- !!:FIX:Security.User: No reentrant password hash calculation by function crypt() is replaced by reentrant function crypt_r().
- !!:SYS, TValue, UI.VCAEngine: The object TEValObj is added for like to scalar processing for EVAL.
- !:FIX:DAQ.DAQGate: Init reconnect counter set global for flag "call_st".
    Call enable_() for reconnect by reconnect counter zero for prevent empty request at first start and no planed for update parameters present.
- FIX:DAQ.System: HDDTemp source is fixed for no stable and no full requests. Multiple creation and deletion transport is prevented.


2012-08-09 Roman
- FIX:Archive: TVArchive::archivatorAttach() rewrited for new archivators correct attach and set it into "ArchS" config-field.


2012-08-08 Roman
- FIX:UI.Vision: Cursor shape drop to hand is fixed for primitive "Media".


2012-08-07 Roman
- SYS.TVariant: Simple TVarObj object create at request to empty object. At further going to replaced for TEvalObj.


2012-08-04 Roman